@@ -42,7 +42,7 @@ public class YoutubeResultsActivity extends AppCompatActivity {
 
     private String term;
     private ListView listViewRes;
-    List<SearchResult> searchResultList;
+    private List<SearchResult> searchResultList;
 
     private long number_of_videos_returned;
 
@@ -60,7 +60,7 @@ public class YoutubeResultsActivity extends AppCompatActivity {
         String num_str = PreferenceManager
                 .getDefaultSharedPreferences(this.getApplicationContext())
                 .getString("amount", "20");
-        number_of_videos_returned = new Long(num_str);
+        number_of_videos_returned = Long.valueOf(num_str);
     }
 
     @Override
@@ -87,7 +87,8 @@ public class YoutubeResultsActivity extends AppCompatActivity {
      */
     private SearchListResponse getResultsList() {
         try {
-            SearchListResponse searchResponse = new AsyncTask<Void, Void, SearchListResponse>() {
+
+            return new AsyncTask<Void, Void, SearchListResponse>() {
                 @Override
                 protected SearchListResponse doInBackground(Void... voids) {
 
@@ -107,9 +108,7 @@ public class YoutubeResultsActivity extends AppCompatActivity {
                                 "snippet/thumbnails/default/url)");
                         searchYt.setMaxResults(number_of_videos_returned);
 
-                        SearchListResponse searchResponse = searchYt.execute();
-
-                        return searchResponse;
+                        return searchYt.execute();
 
                     } catch (GoogleJsonResponseException e) {
                         Log.d("except", "salgo de la actividad");
@@ -122,8 +121,6 @@ public class YoutubeResultsActivity extends AppCompatActivity {
                     }
                 }
             }.execute((Void) null).get();
-
-            return searchResponse;
 
         } catch (InterruptedException e) {
             setResult(RESULT_IOEXCPT);
@@ -138,7 +135,7 @@ public class YoutubeResultsActivity extends AppCompatActivity {
      * Adaptador para implementar el patrón Holder en la vista de los resultados.
      */
     public class YtAdapter extends BaseAdapter {
-        private LayoutInflater inflater;
+        private final LayoutInflater inflater;
 
         public YtAdapter() {
             inflater= (LayoutInflater) getSystemService(
@@ -147,7 +144,7 @@ public class YoutubeResultsActivity extends AppCompatActivity {
 
         @Override
         public int getCount(){
-            return (int) searchResultList.size();
+            return searchResultList.size();
         }
 
         @Override
